tests/ivg/invalid/font_duplicate_glyph.ivg
format IVG-3
// duplicate glyph definition
define font f [
	metrics ascent:1 descent:-1 upm:1000
	glyph a 0 []
	glyph a 0 []
]
